--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,8 @@
            <a href="{{ site.baseurl }}/">About</a>
             <a href="{{ site.baseurl }}/code">Code</a>
             <a href="{{ site.baseurl }}/documents">Documents</a>
-			<a href="{{ site.baseurl }}/blog">Blog</a>
+	  <!--  <a href="{{ site.baseurl }}/art"> Art</a> !-->
+	    <a href="{{ site.baseurl }}/blog">Blog</a>
 
           </nav>
         </header>
